--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         <!-- Ingredients DD -->
         <div class="btn-group mb-3">
+
           <div class="dropdown-item-container">
               <div class="input-container">
                   <div class="header-input-container">
@@ -86,7 +87,7 @@
 
             <!-- USTENSILS DD -->
             <div class="dropdown-item-container">
-                <div class="ustensil-input-container">
+                <div class="input-container">
                     <div class="header-input-container">
                         <label for="ustensils-input">Ustensils</label>
                         <span class="arrow" id="ustensil-down-arrow">
@@ -99,11 +100,12 @@
                             <path d="M1 7L7.5 1L14 7" stroke="#1B1B1B" stroke-linecap="round"/>
                           </svg>
                       </span>
+                </div>
+                    <div class="tete">
+                        <input class="tags-input" id="ustensils-input" type="text">
                     </div>
-                    <input class="tags-input" id="ustensils-input" type="text">
                 </div>
                 <ul class="tags-list" id="tags-ustensils">
-
                 </ul>
             </div>
         </div>
