--- a/index.html
+++ b/index.html
@@ -30,60 +30,60 @@
       </section>
       <section class="recipes-section">
         <!--     Tags section-->
-        <div id="tags-container" class="mb-3"></div>
 
         <!-- Ingredients DD -->
-        <div class="btn-group mb-3">
+        <div id="tags-list-container">
 
-          <div class="dropdown-item-container">
-              <div class="input-container">
-                  <div class="header-input-container">
-                      <label for="ingredients-input">Ingredients</label>
-                      <span class="arrow" id="ingredient-down-arrow">
-                          <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L7.5 7L14 1" stroke="#1B1B1B" stroke-linecap="round"/>
-                          </svg>
-                      </span>
-                      <span class="arrow" id="ingredient-up-arrow">
-                          <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 7L7.5 1L14 7" stroke="#1B1B1B" stroke-linecap="round"/>
-                          </svg>
-                      </span>
-                  </div>
-                  <div class="tete">
-                      <input class="tags-input" id="ingredients-input" type="text">
-                  </div>
-              </div>
+        <div class="tutu">
+            <div class="dropdown-item-container">
+                <div class="input-container">
+                    <div class="header-input-container">
+                        <label for="ingredients-input">Ingredients</label>
+                        <span class="arrow" id="ingredient-down-arrow">
+                              <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 1L7.5 7L14 1" stroke="#1B1B1B" stroke-linecap="round"/>
+                              </svg>
+                          </span>
+                        <span class="arrow" id="ingredient-up-arrow">
+                              <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 7L7.5 1L14 7" stroke="#1B1B1B" stroke-linecap="round"/>
+                              </svg>
+                          </span>
+                    </div>
+                    <div class="tete">
+                        <input class="tags-input" id="ingredients-input" type="text">
+                    </div>
+                </div>
 
-            <ul class="tags-list"  id="tags-ingredients">
-            </ul>
-          </div>
-          &nbsp;
+                <ul class="tags-list"  id="tags-ingredients">
+                </ul>
+            </div>
+            &nbsp;
 
-          <!-- Appliances DD -->
-          <div class="dropdown-item-container">
-              <div class="input-container">
-                  <div class="header-input-container">
-                      <label for="appliances-input">Appliances</label>
-                      <span class="arrow" id="appliance-down-arrow">
-                          <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L7.5 7L14 1" stroke="#1B1B1B" stroke-linecap="round"/>
-                          </svg>
-                      </span>
-                      <span class="arrow" id="appliance-up-arrow">
-                          <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 7L7.5 1L14 7" stroke="#1B1B1B" stroke-linecap="round"/>
-                          </svg>
-                      </span>
-                  </div>
-                  <div class="tete">
-                    <input class="tags-input" id="appliances-input" type="text">
-                  </div>
-              </div>
+            <!-- Appliances DD -->
+            <div class="dropdown-item-container">
+                <div class="input-container">
+                    <div class="header-input-container">
+                        <label for="appliances-input">Appliances</label>
+                        <span class="arrow" id="appliance-down-arrow">
+                              <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 1L7.5 7L14 1" stroke="#1B1B1B" stroke-linecap="round"/>
+                              </svg>
+                          </span>
+                        <span class="arrow" id="appliance-up-arrow">
+                              <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 7L7.5 1L14 7" stroke="#1B1B1B" stroke-linecap="round"/>
+                              </svg>
+                          </span>
+                    </div>
+                    <div class="tete">
+                        <input class="tags-input" id="appliances-input" type="text">
+                    </div>
+                </div>
                 <ul class="tags-list"  id="tags-appliances">
                 </ul>
-          </div>
-          &nbsp;
+            </div>
+            &nbsp;
 
             <!-- USTENSILS DD -->
             <div class="dropdown-item-container">
@@ -91,16 +91,16 @@
                     <div class="header-input-container">
                         <label for="ustensils-input">Ustensils</label>
                         <span class="arrow" id="ustensil-down-arrow">
-                          <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 1L7.5 7L14 1" stroke="#1B1B1B" stroke-linecap="round"/>
-                          </svg>
-                      </span>
+                              <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 1L7.5 7L14 1" stroke="#1B1B1B" stroke-linecap="round"/>
+                              </svg>
+                          </span>
                         <span class="arrow" id="ustensil-up-arrow">
-                          <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 7L7.5 1L14 7" stroke="#1B1B1B" stroke-linecap="round"/>
-                          </svg>
-                      </span>
-                </div>
+                              <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 7L7.5 1L14 7" stroke="#1B1B1B" stroke-linecap="round"/>
+                              </svg>
+                          </span>
+                    </div>
                     <div class="tete">
                         <input class="tags-input" id="ustensils-input" type="text">
                     </div>
@@ -109,9 +109,9 @@
                 </ul>
             </div>
         </div>
-
-
-        <div id="recipes-container"></div>
+        </div>
+          <div id="tags-container"></div>
+          <div id="recipes-container"></div>
       </section>
     </main>
   </body>
