--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
                           </span>
                     </div>
                     <div class="tete">
-                        <input class="tags-input" id="appliances-input" type="text">
+                        <div class="azy" id="appliances-input-container">
+                            <input class="tags-input" id="appliances-input" type="text">
+                            <img class="hidden" id="close-icon-appliance-tag-input" width="10" height="10" src="./assets/images/close-icon.png" alt="">
+                            <img class="hidden" id="search-icon-appliance-tag-input"  width="20" height="20" src="./assets/images/search-icon-tag.svg" alt="">
+                        </div>
                     </div>
                 </div>
                 <ul class="tags-list"  id="tags-appliances">
